--- a/css/styles.css
+++ b/css/styles.css
@@ -361,8 +361,7 @@ a {
   color: #58e1c1;
   margin-left: 10px;
 }
-
-.headline-secondary {
+.headline-primary-secondary {
   font-weight: 300;
   color: #777;
 }
@@ -394,25 +393,50 @@ a {
   text-transform: uppercase;
   border-radius: 5px;
 }
+@media (min-width: 768px) {
+  .btn {
+    padding: 10px 30px;
+  }
+}
 
 .default {
   background-color: #51ddfc;
+  transition-duration: 0.5s;
+}
+.default:hover {
+  background-color: #9cecfd;
 }
 
 .error {
   background-color: #e4757a;
+  transition-duration: 0.5s;
+}
+.error:hover {
+  background-color: #f1b5b8;
 }
 
 .info {
   background-color: #927bc1;
+  transition-duration: 0.5s;
+}
+.info:hover {
+  background-color: #bdafd9;
 }
 
 .success {
   background-color: #63cc82;
+  transition-duration: 0.5s;
+}
+.success:hover {
+  background-color: #9ddfb0;
 }
 
 .warning {
   background-color: #fd7856;
+  transition-duration: 0.5s;
+}
+.warning:hover {
+  background-color: #feb4a2;
 }
 
 /* ============================================= */
@@ -446,11 +470,24 @@ a {
 .container {
   padding: 0 10px;
 }
+@media (min-width: 768px) {
+  .container {
+    max-width: 1400px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
 
 .row {
   display: flex;
   flex-direction: column;
   padding: 1em 10px;
+}
+@media (min-width: 768px) {
+  .row {
+    flex-direction: row;
+  }
 }
 
 [class^=col] {
@@ -459,6 +496,14 @@ a {
   min-height: 25px;
   padding: 10px;
   border-radius: 5px;
+}
+@media (min-width: 768px) {
+  [class^=col] {
+    display: flex;
+    justify-content: center;
+    margin-top: 0;
+    align-items: center;
+  }
 }
 
 .theme.col-1 {
@@ -524,8 +569,7 @@ a {
   max-width: 100%;
   max-height: 100%;
 }
-
-.img-frame {
+.img-avatar-frame {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -534,8 +578,7 @@ a {
   padding: 13px;
   border: 1px solid #ccc;
 }
-
-.img-logo {
+.img-avatar-logo {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -545,28 +588,10 @@ a {
 /*              Media Queries                    */
 /* ============================================= */
 @media (min-width: 768px) {
-  .container {
-    max-width: 1400px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
   .centered {
     display: block;
     margin-left: auto;
     margin-right: auto;
-  }
-
-  .row {
-    flex-direction: row;
-  }
-
-  [class^=col] {
-    display: flex;
-    justify-content: center;
-    margin-top: 0;
-    align-items: center;
   }
 
   [class^=col] + [class^=col] {
@@ -621,20 +646,6 @@ a {
     flex-basis: 100%;
   }
 
-  .nav {
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-  }
-
-  .nav-link {
-    flex-basis: 100px;
-  }
-
-  .btn {
-    padding: 10px 30px;
-  }
-
   .btn + .btn {
     margin-left: 10px;
   }
@@ -653,7 +664,13 @@ a {
   display: flex;
   flex-direction: column;
 }
-
+@media (min-width: 768px) {
+  .nav {
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+  }
+}
 .nav-link {
   text-align: center;
   border-radius: 5px;
@@ -662,7 +679,11 @@ a {
   width: 100%;
   transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 }
-
+@media (min-width: 768px) {
+  .nav-link {
+    flex-basis: 100px;
+  }
+}
 .nav-link:hover {
   color: #fff;
   background-color: #58e1c1;
