--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -7,43 +7,43 @@
     font-family: 'Lato', sans-serif;
     color: #777;
     box-sizing: border-box;
-  }
-  
-  p {
+}
+
+p {
     line-height: 1.45em;
-  }
-  
-  a {
+}
+
+a {
     text-decoration: none;
-  }
+}
   
   
   /* ============================================= */
   /*              Typography                       */
   /* ============================================= */
   
-  .headline-primary {
-    color: #58e1c1;
+.headline-primary {
+    color: $color-primary;
     margin-left: 10px;
-  }
-  
-  .headline-secondary {
-    font-weight: 300;
-    color: #777;
-  }
-  
-  .link {
-    color: #51ddfc;
+
+    &-secondary {
+        font-weight: 300;
+        color: #777;
+    }
+}
+
+.link {
+    color: $color-default;
     font-weight: 700;
-  }
-  
-  .blockquote {
+}
+
+.blockquote {
     font-size: 1.5em;
     font-weight: 300;
     font-style: italic;
     margin-left: 20px;
     padding-left: 20px;
-    border-left: 8px solid #58e1c1;
+    border-left: 8px solid $color-primary;
     border-radius: 5px;
-  }
+}
   
