--- a/scss/component/_buttons.scss
+++ b/scss/component/_buttons.scss
@@ -10,24 +10,53 @@
     padding: 10px 0;
     text-transform: uppercase;
     border-radius: 5px;
-  }
+
+    @include mq($width-medium){
+        padding: 10px 30px;
+    }
+}
   
-  .default {
-    background-color: #51ddfc;
-  }
-  
-  .error {
-    background-color: #e4757a;
-  }
-  
-  .info {
-    background-color: #927bc1;
-  }
-  
-  .success {
-    background-color: #63cc82;
-  }
-  
-  .warning {
-    background-color: #fd7856;
-  }
+.default {
+    background-color: $color-default;
+    transition-duration: .5s;
+
+    &:hover {
+        background-color: $light-default;
+    }
+}
+
+.error {
+    background-color: $color-error;
+    transition-duration: .5s;
+
+    &:hover {
+        background-color: $light-error;
+    }
+}
+
+.info {
+    background-color: $color-info;
+    transition-duration: .5s;
+
+    &:hover {
+        background-color: $light-info;
+    }
+}
+
+.success {
+    background-color: $color-success;
+    transition-duration: .5s;
+
+    &:hover {
+        background-color: $light-success;
+    }
+}
+
+.warning {
+    background-color: $color-warning;
+    transition-duration: .5s;
+
+    &:hover {
+        background-color: $light-warning;
+    }
+}
