--- a/scss/component/_media-queries.scss
+++ b/scss/component/_media-queries.scss
@@ -1,30 +1,12 @@
 /* ============================================= */
 /*              Media Queries                    */
 /* ============================================= */
-@media (min-width: 768px) {
-
-    .container {
-      max-width: 1400px;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-    }
+@media (min-width: $width-medium) {
     
     .centered {
       display: block;
       margin-left: auto;
       margin-right: auto;
-    }
-    
-    .row {
-      flex-direction: row;
-    }
-    
-    [class^=col] {
-      display: flex;
-      justify-content: center;
-      margin-top: 0;
-      align-items: center;
     }
     
     [class^=col] + [class^=col] {
@@ -79,20 +61,6 @@
       flex-basis: 100%;
     }
     
-    .nav {
-      flex-direction: row;
-      justify-content: flex-end;
-      align-items: center;
-    }
-    
-    .nav-link {
-      flex-basis: 100px;
-    }
-    
-    .btn {
-      padding: 10px 30px;
-    }
-    
     .btn + .btn {
       margin-left: 10px;
     }
@@ -100,6 +68,5 @@
     .logo {
       margin-left: initial;
       margin-right: initial;
-    }
-    
-    }
+    }   
+}
