--- a/scss/component/_navigation.scss
+++ b/scss/component/_navigation.scss
@@ -7,20 +7,30 @@
     flex-basis: 100%;
     display: flex;
     flex-direction: column;
-  }
-  
-  .nav-link {
-    text-align: center;
-    border-radius: 5px;
-    padding: 10px 0;
-    display: block;
-    width: 100%;
-    transition: 
-      background-color .2s ease-in-out, 
-      color .2s ease-in-out;
-  }
-  
-  .nav-link:hover {
-    color: #fff;
-    background-color: #58e1c1;
-  }
+
+    @include mq($width-medium){
+        flex-direction: row;
+        justify-content: flex-end;
+        align-items: center;
+    }
+
+    &-link {
+        text-align: center;
+        border-radius: 5px;
+        padding: 10px 0;
+        display: block;
+        width: 100%;
+        transition: 
+        background-color .2s ease-in-out, 
+        color .2s ease-in-out;
+    
+        @include mq($width-medium){
+            flex-basis: 100px;
+        }
+    
+        &:hover {
+            color: #fff;
+            background-color: $color-primary;
+        }
+    }
+}
